# coi_farm_optimizer

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  scenario.json
.github/workflows/: windows-release.yml
data/: wiki_crop_data.json
specs/: gui.md  problem-definition.md  solver.md
src/: lib.rs  main.rs  report.rs  scenario.rs  scenario_prep.rs
src/domain/: allocation.rs  allocation_problem.rs  catalog.rs  crop.rs  fertility.rs  mod.rs  optimizer.rs  recipe.rs  settlement.rs
src/io/: mod.rs  recipe.rs  wiki.rs
src/ui_support/: baseline_editor.rs  extra_targets.rs  mod.rs  scenario_binding.rs
ui/: appwindow.slint
