[package]
name = "coi-rust"
version = "0.1.0"
edition = "2024"
description = "Captain of Industry farming and food optimization tool in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["captain-of-industry", "optimization", "rust", "slint"]
categories = ["science", "simulation"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
good_lp = { version = "1", default-features = false, features = ["highs"] }
highs = "2"
highs-sys = "1"
slint = "1"
minijinja = "2"

[build-dependencies]
slint-build = "1"
